--- a/DepanFxScene/src/main/resources/com/pnambic/depanfx/scene/scene.fxml
+++ b/DepanFxScene/src/main/resources/com/pnambic/depanfx/scene/scene.fxml
@@ -20,7 +20,7 @@
             <menus>
                 <Menu text="File">
                     <items>
-                        <MenuItem text="New"/>
+                        <Menu fx:id="fileNew" text="New"/>
                         <SeparatorMenuItem />
                         <MenuItem text="Open"/>
                         <MenuItem fx:id="fileOpenProjectItem" text="Open Project.."/>
