--- a/DepanFxScene/src/main/resources/com/pnambic/depanfx/scene/scene.fxml
+++ b/DepanFxScene/src/main/resources/com/pnambic/depanfx/scene/scene.fxml
@@ -13,7 +13,8 @@
 <BorderPane
       maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
       prefHeight="400.0" prefWidth="600.0"
-      xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+      xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.pnambic.depanfx.scene.DepanFxSceneController">
     <top>
         <MenuBar>
             <menus>
