Tool data for tree sections

--- a/DepanFxNodeListGui/src/main/resources/com/pnambic/depanfx/nodelist/gui/save-node-list-dialog.fxml
+++ b/DepanFxNodeListGui/src/main/resources/com/pnambic/depanfx/nodelist/gui/save-node-list-dialog.fxml
@@ -10,7 +10,8 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            prefWidth="400" prefHeight="200">
+            prefWidth="400" prefHeight="200"
+            fx:controller="com.pnambic.depanfx.nodelist.gui.DepanFxSaveNodeListDialog" >
 
    <VBox spacing="10" layoutX="10" layoutY="10"
          AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10"
