Add name and description to node lists.
Add support for name and description to dialogs and persistence.
Introduce new TagDataLoader to handle tag-based deserialization.

Improve naming pattern for git log node lists.

--- a/DepanFxNodeListGui/src/main/resources/com/pnambic/depanfx/nodelist/gui/columns/category-column-tool-dialog.fxml
+++ b/DepanFxNodeListGui/src/main/resources/com/pnambic/depanfx/nodelist/gui/columns/category-column-tool-dialog.fxml
@@ -37,7 +37,8 @@
 
          <Label text="Categories"/>
 
-         <TableView fx:id="categoriesTable" editable="true">
+         <TableView fx:id="categoriesTable" editable="true"
+            VBox.vgrow="ALWAYS">
             <columns>
                 <TableColumn text="Label"
                     editable="true"
@@ -86,8 +87,6 @@
             <Button text="Browse" onAction="#openDestinationChooser"
                   HBox.hgrow="ALWAYS"/>
          </HBox>
-
-         <Region VBox.vgrow="ALWAYS" />
 
          <HBox spacing="10">
             <Button text="Cancel" onAction="#handleCancel"/>
