--- a/DepanFxNodeListGui/src/main/resources/com/pnambic/depanfx/nodelist/gui/save-node-list-dialog.fxml
+++ b/DepanFxNodeListGui/src/main/resources/com/pnambic/depanfx/nodelist/gui/save-node-list-dialog.fxml
@@ -17,6 +17,24 @@
          AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10"
          AnchorPane.topAnchor="10" AnchorPane.bottomAnchor="10">
 
+         <Label text="Node List Details"/>
+
+         <Label fx:id="nodeListDetailsLabel"/>
+
+         <HBox spacing="10">
+            <TextField fx:id="nodeListNameField" editable="true"
+                  promptText="Node list name"
+                  HBox.hgrow="ALWAYS"/>
+         </HBox>
+
+         <Label text="Node List Description"/>
+
+         <HBox spacing="10">
+            <TextField fx:id="nodeListDescriptionField" editable="true"
+                  promptText="Node dist description"
+                  HBox.hgrow="ALWAYS"/>
+         </HBox>
+
          <Label text="Select Destination File"/>
 
          <HBox spacing="10">
