Add metadata to graph context model and move to built in project

--- a/DepanFxNodeListGui/src/main/resources/com/pnambic/depanfx/nodelist/gui/save-node-list-dialog.fxml
+++ b/DepanFxNodeListGui/src/main/resources/com/pnambic/depanfx/nodelist/gui/save-node-list-dialog.fxml
@@ -21,6 +21,8 @@
 
          <Label fx:id="nodeListDetailsLabel"/>
 
+         <Label text="Node List Name"/>
+
          <HBox spacing="10">
             <TextField fx:id="nodeListNameField" editable="true"
                   promptText="Node list name"
